<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PetShop</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="entre_com_seu_email">BEM-VINDO</string>
    <string name="login">Login</string>
    <string name="entrar">Entrar</string>
    <string name="ou_se_conecte">Ou Se Conecte</string>
    <string name="senhac">senha</string>
    <string name="cadastre_sse">Cadastre-se</string>
    <string name="voltar">Voltar</string>
</resources>