<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:orientation="vertical">


    <ImageView
        android:layout_width="300sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:src="@drawable/pets_imagem" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastre_sse"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="120sp"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:fontFamily="sans-serif"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_Email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_Senha"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:hint="@string/senhac">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_ConfSenha"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:hint="@string/confirmar_senha">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="35sp"

        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cadastrar2"
            android:layout_width="160sp"
            android:layout_height="60sp"
            android:backgroundTint="@color/azul"
            android:text="@string/cadastrar"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="40sp"
            android:layout_marginRight="10sp"/>

        <Button
            android:id="@+id/btn_voltar"
            android:layout_width="110sp"
            android:layout_height="60sp"
            android:backgroundTint="@color/azul"
            android:text="@string/voltar"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="40sp"
            android:layout_marginLeft="10sp"/>

    </LinearLayout>

    </LinearLayout>

</RelativeLayout>