<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300sp"
            android:layout_height="100sp"
            android:layout_gravity="center"
            android:src="@drawable/pets_imagem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100sp"
            android:layout_marginTop="90sp"
            android:layout_marginBottom="25sp"
            android:text="@string/entre_com_seu_email"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_Login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:hint="@string/login">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_Senha"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:hint="@string/senha">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_entrar"
                android:layout_width="130sp"
                android:layout_height="55sp"
                android:backgroundTint="@color/azul"
                android:text="@string/entrar"
                android:textAllCaps="false"
                android:textSize="15sp"
                app:cornerRadius="40sp" />

            <Button
                android:id="@+id/btn_cadastre"
                android:layout_width="150sp"
                android:layout_height="55sp"
                android:layout_marginStart="30sp"
                android:backgroundTint="@color/azul"
                android:text="@string/cadastre_se"
                android:textAllCaps="false"
                android:textSize="15sp"
                app:cornerRadius="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0sp"
                android:layout_height="2sp"
                android:layout_marginStart="10sp"
                android:layout_weight="1"
                android:background="@color/black"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0sp"
                android:layout_height="25sp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/ou_se_conecte"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="0sp"
                android:layout_height="2sp"
                android:layout_marginEnd="10sp"
                android:layout_weight="1"
                android:background="@color/black"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="48sp"
                android:layout_height="48sp"
                android:layout_marginEnd="5sp"
                android:background="@drawable/icone_facebook" />

            <Button
                android:layout_width="42sp"
                android:layout_height="42sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/icone_google" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>